--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -547,7 +547,7 @@
     "error-to-innodb": "Error al convertir la tabla a InnoDB.",
     "error-updating-product-stock": "¡Error al actualizar el stock del producto!",
     "errors": "Errores",
-    "es_EC": "Español (Ecuador)",
+    "es_EC": "Španělština (Ekvádor)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
@@ -712,7 +712,7 @@
     "grouping-type": "Agrupación",
     "groups": "Grupos",
     "has-attachments": "Má přílohy",
-    "has-parent": "Tiene padre",
+    "has-parent": "Má rodiče",
     "hash": "Hash",
     "header": "Hlavička",
     "heading-account-group-id": "ID grupo epígrafes",
@@ -887,7 +887,7 @@
     "location": "Ubicación",
     "lock-accounting": "Bloquear contabilidad",
     "lock-entry": "Bloquear asiento",
-    "lock-invoice": "Marcar emitida",
+    "lock-invoice": "Uzamknout fakturu",
     "lock-unlock": "(Des)Bloquear",
     "lock-unlock-account-entry": "Bloquear\/Desbloquear el asiento contable",
     "locked": "Bloqueado",
@@ -1141,7 +1141,7 @@
     "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "physical-stock": "Stock físico",
-    "picking": "Picking",
+    "picking": "Sběr",
     "plan": "Plan",
     "please-enter-value": "Por favor, introduzca un valor para el campo",
     "plugin": "Plugin",
@@ -1327,7 +1327,7 @@
     "search-document": "Escribe el número de %doctype% para buscar.",
     "search-product": "Buscar producto",
     "second-hand": "Segunda mano",
-    "second-quarter": "2º trimestre",
+    "second-quarter": "2. čtvrtletí",
     "second-trimester": "Segundo trimestre",
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
@@ -1524,11 +1524,11 @@
     "thousands-separator": "Separador de millares",
     "thursday": "Jueves",
     "ticket": "Ticket",
-    "tickets": "Tickets",
+    "tickets": "Vstupenky",
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
-    "title-font-size": "Tamaño fuente título",
+    "title-font-size": "Velikost písma nadpisu",
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
@@ -1548,7 +1548,7 @@
     "town": "Población",
     "tracking-code": "Código seguimiento",
     "transfer": "Transferencia",
-    "transfers": "Tranferencias",
+    "transfers": "Převody",
     "transfers-stock": "Transferencias de stock",
     "translation": "Traducción",
     "translations": "Traducciones",
@@ -1593,7 +1593,7 @@
     "uploaded-at": "Cargado en",
     "url": "Dirección web",
     "use-gaps": "Usar huecos",
-    "use-holes-invoices-esp": "Pokud odškrtnete použítí mezer ve fakturách a některá odstraníte, zůstane v fakturaci mezera a budete mít problémy s pokladnou",
+    "use-holes-invoices-esp": "Pokud odškrtnete použití mezer ve fakturách a některá odstraníte, zůstane v fakturaci mezera a budete mít problémy s pokladnou",
     "user": "Usuario",
     "user-and-config": "Uživatel a konfigurace",
     "users": "Usuarios",
