--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -337,7 +337,7 @@
     "credit": "Credit",
     "crm": "CRM",
     "cron-job": "Scheduled Task",
-    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
+    "cron-timeout": "The cron has stopped to avoid exceeding the maximum PHP execution time. Please run the cron from the terminal to avoid this limit.",
     "crons": "Crons",
     "currency": "Currency",
     "currency-position": "Currency position",
@@ -1031,7 +1031,7 @@
     "not-allowed-modify": "You do not have permission to modify",
     "not-enough-stock": "Not enough stock of %reference%",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
-    "not-public": "No público",
+    "not-public": "Not public",
     "not-stored-content": "Content not stored",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "The %type% %number% is not valid",
