--- a/Core/Translation/es_AR.json
+++ b/Core/Translation/es_AR.json
@@ -547,7 +547,7 @@
     "error-to-innodb": "Error al convertir la tabla a InnoDB.",
     "error-updating-product-stock": "¡Error al actualizar el stock del producto!",
     "errors": "Errores",
-    "es_EC": "Español (Argentina)",
+    "es_EC": "Español (Ecuador)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
