--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -334,7 +334,7 @@
     "created": "Created",
     "created-default-admin-account": "Ha creato utente <b> amministratore <\/ b> con la password <b> amministratore <\/ b>.",
     "creation-date": "Data di creazione",
-    "credit": "Credit",
+    "credit": "Credito",
     "crm": "CRM",
     "cron-job": "cron-job",
     "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
@@ -402,7 +402,7 @@
     "decimal-separator": "Decimale",
     "decimals": "Decimali",
     "default": "Predefinito",
-    "default-customer": "default-customer",
+    "default-customer": "cliente predefinito",
     "default-retention": "ritenzione-predefinita",
     "default-role": "Ruolo predefinito",
     "default-tax": "imposta-predefinita",
@@ -667,10 +667,10 @@
     "generate-accounting-entry": "generate-accounting-entry",
     "generate-doc-type": "Generate document type",
     "generate-invoice": "Crea Fattura",
-    "generate-receipts": "generate-receipts",
+    "generate-receipts": "genera-ricevute",
     "generate-settlements": "generare liquidazioni",
     "generate-test-data": "Genera dati di test",
-    "generate-title": "Run report generation",
+    "generate-title": "Generare il report",
     "generated-accounting-entries": "0 voci di contabilità generate.",
     "generated-accounts": "0 account generati.",
     "generated-agents": "0 agenti generati.",
@@ -712,7 +712,7 @@
     "grouping-type": "Agrupación",
     "groups": "gruppi",
     "has-attachments": "Tiene adjuntos",
-    "has-parent": "has-parent",
+    "has-parent": "ha-genitore",
     "hash": "Hash",
     "header": "Intestazione",
     "heading-account-group-id": "Gruppo ID dell'account di intestazioni",
@@ -743,7 +743,7 @@
     "idem-wildcard-info": "Copia il valore della riga precedente",
     "image": "Imagen",
     "images": "Imágenes",
-    "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "images-added-correctly": "%count% immagini aggiunte correttamente",
     "impacted-tax-re-subaccount": "Sottoconto imposta dovuta",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
     "import": "import",
@@ -872,7 +872,7 @@
     "level-cost-sales": "Livello per visualizzare i costi",
     "level1": "Livello 1",
     "level2": "Level 2",
-    "level3": "Level 3",
+    "level3": "Livello 3",
     "level4": "Level 4",
     "liabilities": "Liabilities",
     "library": "library",
@@ -920,7 +920,7 @@
     "mailer": "Mail controller",
     "main-address": "Indirizzo principale",
     "manage": "gestire",
-    "manage-installation": "Administrar",
+    "manage-installation": "Gestire",
     "manual": "manual",
     "manufacturer": "fabbricante",
     "manufacturer-code": "Codice produttore",
@@ -1032,7 +1032,7 @@
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
     "not-public": "Non pubblico",
-    "not-stored-content": "Contenido no almacenado",
+    "not-stored-content": "Contenuto non memorizzato",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
     "not-valid-image": "Immagine non valida",
@@ -1052,7 +1052,7 @@
     "numeric-formats": "Formati numerici",
     "numsupplier": "Num. fornitore",
     "observations": "osservazioni",
-    "october": "Octubre",
+    "october": "Ottobre",
     "offsetting-account": "Offsetting account",
     "only-active": "only-active",
     "only-charged": "only-charged",
@@ -1072,7 +1072,7 @@
     "option": "opzione",
     "optional": "facoltativo",
     "options": "opzioni",
-    "options-button-header": "Maquetación y permisos",
+    "options-button-header": "Maquetación y permessi",
     "order": "ordine",
     "order-email-subject": "order-email-subject",
     "order-email-text": "order-email-text",
@@ -1103,7 +1103,7 @@
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
     "parent-group-loop": "Parent group %parentGroup% causing circular relation.",
     "partnumber": "Numero di parte",
-    "passenger": "Pasajero",
+    "passenger": "Passeggero",
     "password": "Contraseña",
     "pattern": "pattern",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
@@ -1130,7 +1130,7 @@
     "percentage-commission": "% Commission",
     "percentage-discount": "percentage-discount",
     "percentage-surcharge": "% Surcharge",
-    "percentage-vat": "% VAT",
+    "percentage-vat": "% IVA",
     "period": "period",
     "personalized": "Personalizado",
     "phase": "phase",
@@ -1211,7 +1211,7 @@
     "province": "provincia",
     "provinces": "provinces",
     "public": "Pubblico",
-    "public-key": "Clave pública",
+    "public-key": "Chiave pubblica",
     "purchase-rate": "Tasso di acquisto",
     "purchased-quantity": "purchased-quantity",
     "purchases": "acquisti",
@@ -1233,14 +1233,14 @@
     "re-open": "Riaprire",
     "react": "Reaccionar",
     "read-message-by": "Leído por %nick% el %date%",
-    "read-more": "Leer más",
+    "read-more": "Leggi di più",
     "readonly": "sola lettura",
-    "rebuild": "rebuild",
+    "rebuild": "ricostruire",
     "rebuild-completed": "rebuild-completed",
     "rebuild-stock": "rebuild-stock",
     "receipt": "receipt",
     "receipt-expense-account": "receipt-expense-account",
-    "receipts": "receipts",
+    "receipts": "ricevute",
     "record-deleted-correctly": "Record cancellato correttamente!",
     "record-deleted-error": "record-deleted-error",
     "record-not-found": "record-not-found",
@@ -1275,13 +1275,13 @@
     "reloading": "reloading",
     "remove-filter": "remove-filter",
     "remove-from-list": "remove-from-list",
-    "removing-logs-until": "Eliminando logs hasta el %date%",
+    "removing-logs-until": "Rimozione log fino al %date%",
     "renew": "renew",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumber Accounting",
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
-    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-accounting-p": "Rinumera le scritture contabili per data, da minore a maggiore",
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Le fatture dell'esercizio '%exercise%' sono state rinumerate correttamente",
     "repeat-new-password": "Ripetere la password",
@@ -1306,7 +1306,7 @@
     "retentions": "Retentions",
     "review-date": "Data della recensione",
     "right": "Right",
-    "risky-customer": "risky-customer",
+    "risky-customer": "cliente a rischio",
     "rol": "Rol",
     "role": "Ruolo",
     "roles": "ruoli",
@@ -1326,7 +1326,7 @@
     "search": "Ricerca",
     "search-document": "Inserisci il numero di %doctype% per cercare.",
     "search-product": "Cerca prodotto",
-    "second-hand": "Segunda mano",
+    "second-hand": "Di seconda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Second trimester",
     "select": "select",
@@ -1377,7 +1377,7 @@
     "short": "Corto",
     "short-name": "Nome breve",
     "show": "show",
-    "show-balance-graphic": "show-balance-graphic",
+    "show-balance-graphic": "Mostra grafico del saldo",
     "show-crm-warnings": "Mostrar avisos CRM",
     "show-expired-receipts": "Mostra ricevute scadute",
     "show-month-stats": "Mostra statistiche mensili",
@@ -1475,7 +1475,7 @@
     "supplier-products": "Prodotti del fornitore",
     "supplier-reference": "Riferimento del fornitore",
     "suppliers": "fornitori",
-    "support": "Soporte",
+    "support": "Supporto",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "supported-tax-subaccount",
     "surcharge": "Sovraccarico",
@@ -1516,7 +1516,7 @@
     "third-trimester": "Third trimester",
     "this-last-fortnight": "Ultimi 15 giorni",
     "this-last-month": "Ultimo mese",
-    "this-last-week": "Ultimi 7 giorni",
+    "this-last-week": "Ultima settimana",
     "this-last-year": "Ultimo anno",
     "this-month": "this-month",
     "this-week": "this-week",
@@ -1550,7 +1550,7 @@
     "transfer": "trasferimento",
     "transfers": "transfers",
     "transfers-stock": "Transfers stock",
-    "translation": "Traducción",
+    "translation": "Traduzione",
     "translations": "Traduzioni",
     "travel": "Viaje",
     "try-again-later": "try-again-later",
@@ -1558,7 +1558,7 @@
     "type": "tipo",
     "type-alert": "Type alert",
     "type-critical": "Type critical",
-    "type-debug": "Type debug",
+    "type-debug": "Tipo debug",
     "type-emergency": "Type emergency",
     "type-error": "Type error",
     "type-info": "Type info",
@@ -1595,7 +1595,7 @@
     "use-gaps": "use-gaps",
     "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
     "user": "utente",
-    "user-and-config": "Usuario y configuración",
+    "user-and-config": "Utente e configurazione",
     "users": "utenti",
     "using-apc": "Utilizzo della cache APC",
     "using-filecache": "Utilizzando Filecache",
