--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -182,7 +182,7 @@
     "cancel-data": "Cancelar alterações ou operação",
     "cancelled": "cancelado",
     "cannot-generate-accounting-entry": "Erro ao gerar o lançamento contábil da fatura %invoice%",
-    "cant-assign-date-already-regularized": "Você não pode atribuir a data 0 porque já existe uma regularização de 1 para esse período.",
+    "cant-assign-date-already-regularized": "Não é possível atribuir a data %date% pois já existe uma regularização de %tax% para esse período.",
     "cant-assing-subaccount-supplier": "Não é possível associar subconta para provedor 0",
     "cant-associate-customer-subaccount": "Não é possível associar a subconta do cliente 0",
     "cant-change-accounting-entry-exercise": "No se puede cambiar el ejercicio del asiento. Cree uno nuevo.",
@@ -234,7 +234,7 @@
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Seleciona a série",
     "choose-source": "Choose source",
-    "cifnif": "TIC \/ TIN",
+    "cifnif": "CIF\/NIF",
     "cities": "cidades",
     "city": "Cidade",
     "click-link-to-add": "haz-clic-en-el-enlace-para-agregar",
@@ -277,12 +277,12 @@
     "common-error": "Erro",
     "companies": "Empresas",
     "company": "Empresa",
-    "company-commission-info": "company-commission-info",
+    "company-commission-info": "Informações de comissão da empresa",
     "company-manager": "Gerente de empresa",
     "company-name": "Nome da empresa",
     "company-warehouse": "Empresa\/Armazém",
     "comparative": "Comparativo",
-    "compared": "compared",
+    "compared": "Comparado",
     "compatible": "Compatible",
     "completed": "Completado",
     "component": "Component",
@@ -326,7 +326,7 @@
     "country": "País",
     "country-not-in-eu": "O %codiso% não pertence a nenhum país da União Europeia",
     "create": "Criar",
-    "create-accounting-entry": "Create Accounting Entry",
+    "create-accounting-entry": "Criar lançamento contábil",
     "create-delivery-note": "Crear albarán",
     "create-estimation": "Crear presupuesto",
     "create-invoice": "Criar fatura",
@@ -375,7 +375,7 @@
     "dashboard-for": "Dashboard da %company%",
     "data-source": "Origin data",
     "database": "Base de dados",
-    "database-error": "Error al conectar a la base de datos",
+    "database-error": "Erro ao conectar à base de dados",
     "database-name-must-be-lowercase": "database-name-must-be-lowercase",
     "date": "Data",
     "date-in": "Data em",
@@ -450,7 +450,7 @@
     "design": "Design",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detalhe",
-    "details": "Detalles",
+    "details": "Detalhes",
     "difference": "diferença",
     "different-passwords": "As senhas não correspondem a 0",
     "different-than": "Diferente de",
@@ -463,14 +463,14 @@
     "display": "Display",
     "display-date": "Data de exibição",
     "do-not-disable-plugins": "Não desativar plugins",
-    "do-not-group": "do-not-group",
+    "do-not-group": "não-agrupar",
     "do-nothing": "Do nothing",
     "doc-type": "Document type",
     "document": "Documento",
     "document-configuration": "document-configuration",
     "document-report": "Relatório de documentos",
     "document-sequence": "document-sequence",
-    "document-sequences": "document-sequences",
+    "document-sequences": "Sequências de documentos",
     "document-states": "Document states",
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento inválido. Deve ter entre 1 e 20 caracteres.",
@@ -505,7 +505,7 @@
     "email-not-sent": "Not sent",
     "email-notification": "Notificação por email",
     "email-notification-disabled": "A notificação por email %name% está desativada",
-    "email-notification-not-exists": "Notificación de email %name% no encontrada",
+    "email-notification-not-exists": "Notificação de email %name% não encontrada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "email-replies-to",
     "email-sent": "Sent by Mail",
@@ -526,7 +526,7 @@
     "enabled-plugins": "Plugins ativados",
     "encrypt": "Encrypt",
     "end-date": "Data final",
-    "end-time": "end-time",
+    "end-time": "hora-final",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo Epígrafe",
     "epigraphs": "Epígrafes",
@@ -545,26 +545,26 @@
     "error-saving-lines": "error-saving-lines",
     "error-saving-stock": "¡Erro ao economizar estoque!",
     "error-to-innodb": "Tabela de conversão de erros para InnoDB.",
-    "error-updating-product-stock": "¡Erro ao atualizar o estoque do item!",
+    "error-updating-product-stock": "Erro ao atualizar o estoque do produto",
     "errors": "Erros",
     "es_EC": "es_EC",
     "es-tax-exception-e1": "E",
-    "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
+    "es-tax-exception-e2": "Espanha: exceção pelo artigo 21 da Lei do IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
     "es-tax-exception-e4": "Espanha: exceção do artigo 23 e 24 da Lei do IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "E",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
-    "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-especial-agp": "Regime especial da agricultura, pecuária e pesca",
     "es-tax-regime-exempt": "Isento do regime de impostos",
-    "es-tax-regime-general": "Régimen general",
+    "es-tax-regime-general": "Regime geral",
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
-    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
+    "es-tax-regime-group-entities": "Regime especial do grupo de entidades",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-surcharge": "Sobretaxa de equivalência",
     "es-tax-regime-telecom": "Regimes especiais aplicáveis aos serviços de telecomunicações, de radiodifusão ou de televisão e aos prestados por via eletrônica",
-    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
+    "es-tax-regime-travel": "Regime especial das agências de viagens",
     "es-tax-regime-used-goods": "Regime especial de bens usados, obras de arte, antiguidades e objetos de coleção",
     "estimation": "Estimativa",
     "estimation-email-subject": "O seu orçamento %code%",
@@ -609,11 +609,11 @@
     "file-not-exists": "O Ficheiro não existe: %fileName%",
     "file-not-found": "O arquivo 0 não foi encontrado.",
     "file-not-supported": "Arquivo não suportado",
-    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
+    "file-size-error": "Erro ao enviar o arquivo %fileName% pois excede o tamanho máximo permitido de %maxSize% MB",
     "file-type-error": "Erro ao enviar o arquivo do tipo%typeFile%. Os tipos suportados são: áudio, documento, imagem e vídeo.",
     "file-yet-exists": "O ficheiro já existe: %filePath%",
     "filecache-clear": "Filecache desmarcada.",
-    "filecache-delete-key-item": "Elemento eliminado '0' da Filecache.",
+    "filecache-delete-key-item": "Elemento '%item%' excluído do Filecache.",
     "filecache-get-key-item": "Obtém o elemento '0' da Filecache.",
     "filecache-set-key-item": "Elemento configurado '0' para Filecache.",
     "files": "arquivos",
@@ -643,7 +643,7 @@
     "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Para compra",
     "for-sale": "À venda",
-    "foresee": "Foresee",
+    "foresee": "Prever",
     "format": "format",
     "formula-cost-price": "formula-cost-price",
     "formula-sale-price": "formula-sale-price",
@@ -652,18 +652,18 @@
     "fourth-trimester": "Quarto Trimestre",
     "free": "free",
     "friday": "sexta-feira",
-    "from": "from",
+    "from": "Desde",
     "from-accounting-entry": "from-accounting-entry",
     "from-date": "from-date",
     "from-subaccount": "de subconta",
     "full-access": "Acesso completo",
     "full-path": "Caminho completo",
-    "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
+    "gap-found": "Intervalo encontrado para o número %numero%, dia %data%, %codserie% e empresa %idempresa%",
     "general": "Geral",
     "general-concepts": "Conceitos Gerais",
     "general-data": "Dados gerais",
     "generate": "Gerar",
-    "generate-accounting-entries": "Generar asientos",
+    "generate-accounting-entries": "Gerar lançamentos contábeis",
     "generate-accounting-entry": "generate-accounting-entry",
     "generate-doc-type": "Generate document type",
     "generate-invoice": "generate-invoice",
@@ -735,7 +735,7 @@
     "hours": "hours",
     "http": "HTTP",
     "https": "HTTPS",
-    "i-forgot-password": "i-forgot-password",
+    "i-forgot-password": "esqueci-senha",
     "iban": "IBAN",
     "icon": "icon",
     "id": "Identidade.",
@@ -785,7 +785,7 @@
     "invoice": "Fatura",
     "invoice-email-subject": "A sua fatura %code%",
     "invoice-email-text": "Olá, vai anexa a sua fatura %code%",
-    "invoice-has-no-receipts": "La factura no tiene recibos. Cree alguno desde la pestaña recibos.",
+    "invoice-has-no-receipts": "A fatura não tem recibos. Crie um na aba de recibos.",
     "invoice-have-rectifying-cant-delete": "A factura já possui uma retificação. Não pode ser excluído.",
     "invoice-new-assigned-date": "Há invocados com maior data (0). Nova data atribuída: 1",
     "invoice-number": "Número da factura",
@@ -844,7 +844,7 @@
     "languages-fr_FR": "Franc",
     "languages-gl_ES": "Galego",
     "languages-it_IT": "Italiano",
-    "languages-pl_PL": "Polaco",
+    "languages-pl_PL": "Polonês",
     "languages-pt_BR": "Português (Brasil)",
     "languages-pt_PT": "Português (Portugal)",
     "languages-va_ES": "languages-va_ES",
@@ -853,7 +853,7 @@
     "last-block": "Último bloco",
     "last-ip": "Último IP",
     "last-month": "O último mês",
-    "last-price-estimation": "Última precio de presupuesto",
+    "last-price-estimation": "Último preço de orçamento",
     "last-price-sale": "Último preço de venda",
     "last-purchase-price": "último preço de compra",
     "last-quarter": "last-quarter",
@@ -960,15 +960,15 @@
     "missing-data-subaccount": "Falta dados na subconta.",
     "missing-epigraph-data": "Os dados estão faltando na epígrafe.",
     "missing-file": "Missing file",
-    "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
+    "missing-file-help": "Parece que este arquivo não está presente na sua instalação. Talvez você não o utilize, mas <em>não pode removê-lo<\/em>.",
     "mobile": "mobile",
     "model": "Modelo",
     "model-not-found": "model-not-found",
     "monday": "segunda-feira",
     "month": "Mes",
     "month-1": "Janeiro",
-    "month-10": "Octubre",
-    "month-11": "Noeviembre",
+    "month-10": "Outubro",
+    "month-11": "Novembro",
     "month-12": "Dezembro",
     "month-2": "Fevereiro",
     "month-3": "Marzo",
@@ -1057,7 +1057,7 @@
     "only-active": "only-active",
     "only-charged": "only-charged",
     "only-closed": "only-closed",
-    "only-insert": "Sólo añadir",
+    "only-insert": "somente-inserir",
     "only-owner-data": "Mostrar apenas os registos do usuário",
     "only-pending": "Só pendentes",
     "only-suspended": "only-suspended",
@@ -1090,7 +1090,7 @@
     "page-not-found": "Página não encontrada",
     "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
-    "page-total-amount": "page-total-amount",
+    "page-total-amount": "Total da página",
     "pagename": "Nome da página",
     "pages": "Páginas",
     "paid": "Pagado",
@@ -1120,7 +1120,7 @@
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "Surcharge rate",
-    "pct-tax": "% impuestos",
+    "pct-tax": "% impostos",
     "pct-vat": "VAT rate",
     "pending": "pendente",
     "pending-invoices-button": "Risco:",
@@ -1181,7 +1181,7 @@
     "previously-purchased-from-supplier": "Comprado anteriormente ao fornecedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
     "price": "Preço",
-    "price-with-tax": "price-with-tax",
+    "price-with-tax": "preço-com-imposto",
     "principal": "a Principal",
     "print": "Impressão",
     "print-bank-data": "Imprimir cuenta bancaria",
@@ -1225,7 +1225,7 @@
     "quantity-abb": "quantity-abb",
     "quantity-remaining": "Cantidad restante",
     "quantity-served": "quantity-served",
-    "quantity-sold": "quantity-sold",
+    "quantity-sold": "vendido-em-quantidade",
     "randomizer-generating-more-items": "randomizer-generating-more-items",
     "rate": "rate",
     "rates": "Preços",
@@ -1235,7 +1235,7 @@
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Ler mais",
     "readonly": "readonly",
-    "rebuild": "rebuild",
+    "rebuild": "Reconstruir",
     "rebuild-completed": "rebuild-completed",
     "rebuild-stock": "rebuild-stock",
     "receipt": "receipt",
@@ -1246,7 +1246,7 @@
     "record-not-found": "record-not-found",
     "record-save-error": "An error occurred while saving the record",
     "record-updated-correctly": "Registro atualizado corretamente!",
-    "recreate-system-integrity": "Recreate system integrity",
+    "recreate-system-integrity": "Recriar integridade do sistema",
     "rectified-invoice": "rectified-invoice",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
     "rectified-invoices": "Facturas rectificativas",
@@ -1281,11 +1281,11 @@
     "renumber-accounting": "Renumber Accounting",
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
-    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-accounting-p": "Renumerar as entradas por data, de menor para maior",
     "renumber-invoices-p": "Renumerar as faturas com base na data, de menor para maior",
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Repita a senha",
-    "repeat-password": "Repetir contraseña",
+    "repeat-password": "Repetir senha",
     "reply": "Resposta",
     "report": "Relatório",
     "report-grouping-account": "Group by account",
@@ -1381,7 +1381,7 @@
     "show-crm-warnings": "Mostrar avisos CRM",
     "show-expired-receipts": "Mostrar recibos vencidos",
     "show-month-stats": "Mostrar estatísticas mensais",
-    "show-pending-remittances": "Mostrar remesas pendientes",
+    "show-pending-remittances": "Mostrar remessas pendentes",
     "show-price": "Show price on print",
     "show-quantity": "Mostrar quantidade ao imprimir",
     "show-section-new": "Mostrar seção nova",
@@ -1398,13 +1398,13 @@
     "sort": "Order",
     "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordenar por data crescente",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
+    "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
     "sorted-asc": "Ordenado ascendente",
     "sorted-desc": "Ordenado descendente",
-    "source": "Fuente",
-    "source-code": "Source code",
+    "source": "Fonte",
+    "source-code": "Código fonte",
     "special-account": "Conta especial",
     "special-accounting-entries": "special-accounting-entries",
     "special-accounts": "special-accounts",
@@ -1413,7 +1413,7 @@
     "standard": "standard",
     "start": "Inicio",
     "start-date": "Data de início",
-    "start-hour": "Hora de inicio",
+    "start-hour": "Hora de início",
     "start-time": "start-time",
     "starting-cron": "Iniciando cron para FacturaScripts ...",
     "state": "Estado",
@@ -1440,7 +1440,7 @@
     "subaccount-irpf-creditor": "subaccount-irpf-creditor",
     "subaccount-not-found": "Subconta 0 não encontrado.",
     "subaccount-purchases": "Account for purchases",
-    "subaccount-pyg-not-found": "subaccount-pyg-not-found",
+    "subaccount-pyg-not-found": "subconta-pyg-não-encontrada",
     "subaccount-sales": "Cuenta de ventas",
     "subaccounts": "Subcontas",
     "subfamilies": "s",
@@ -1515,7 +1515,7 @@
     "third-quarter": "3º trimestre",
     "third-trimester": "Terceiro Trimestre",
     "this-last-fortnight": "Nesta última quinzena",
-    "this-last-month": "O último mês",
+    "this-last-month": "Este último mês",
     "this-last-week": "A última semana",
     "this-last-year": "this-last-year",
     "this-month": "Este mês",
@@ -1593,7 +1593,7 @@
     "uploaded-at": "Uploaded at",
     "url": "Local na rede Internet",
     "use-gaps": "use-gaps",
-    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
+    "use-holes-invoices-esp": "Se desmarcar o uso de lacunas nas faturas e excluir alguma, permanecerá a lacuna na faturação e você terá problemas com a receita",
     "user": "Do utilizador",
     "user-and-config": "Usuario y configuración",
     "users": "Comercial",
@@ -1620,9 +1620,9 @@
     "VAT-register": "Registro de VAT",
     "vat-regularization": "VAT Regularization",
     "vehicle": "Vehículo",
-    "verified": "verified",
+    "verified": "verificado",
     "version": "Versão",
-    "video": "Video",
+    "video": "Vídeo",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
@@ -1668,7 +1668,7 @@
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
     "you-sent-a-audio": "Enviaste un audio",
     "you-sent-a-document": "Enviaste un documento",
-    "you-sent-a-location": "Enviaste una ubicación",
+    "you-sent-a-location": "Você enviou uma localização",
     "you-sent-a-picture": "Você enviou uma imagem",
     "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "deveria-mudar-senha",
