--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -264,7 +264,7 @@
     "color-success": "Color éxito",
     "color-warning": "Color advertencia",
     "colors": "colors",
-    "column": "Columna",
+    "column": "Coluna",
     "columns": "Columns",
     "combination-code": "Combination code",
     "combinations": "Combinações",
@@ -326,7 +326,7 @@
     "country": "País",
     "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
     "create": "Criar",
-    "create-accounting-entry": "Create Accounting Entry",
+    "create-accounting-entry": "Criar lançamento contábil",
     "create-delivery-note": "Crear albarán",
     "create-estimation": "Crear presupuesto",
     "create-invoice": "Crear factura",
@@ -375,7 +375,7 @@
     "dashboard-for": "Dashboard da %company%",
     "data-source": "Origin data",
     "database": "Base de dados",
-    "database-error": "Error al conectar a la base de datos",
+    "database-error": "Erro ao conectar à base de dados",
     "database-name-must-be-lowercase": "database-name-must-be-lowercase",
     "date": "Data",
     "date-in": "Data em",
@@ -450,7 +450,7 @@
     "design": "Design",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detalhe",
-    "details": "Detalles",
+    "details": "Detalhes",
     "difference": "difference",
     "different-passwords": "As senhas não correspondem a 0",
     "different-than": "Diferente de",
@@ -462,7 +462,7 @@
     "discount": "Desconto",
     "display": "Display",
     "display-date": "Data de exibição",
-    "do-not-disable-plugins": "No desactivar plugins",
+    "do-not-disable-plugins": "Não desativar plugins",
     "do-not-group": "do-not-group",
     "do-nothing": "Do nothing",
     "doc-type": "Document type",
@@ -545,7 +545,7 @@
     "error-saving-lines": "error-saving-lines",
     "error-saving-stock": "¡Erro ao economizar estoque!",
     "error-to-innodb": "Tabela de conversão de erros para InnoDB.",
-    "error-updating-product-stock": "¡Erro ao atualizar o estoque do item!",
+    "error-updating-product-stock": "Erro ao atualizar o estoque do produto",
     "errors": "Erros",
     "es_EC": "es_EC",
     "es-tax-exception-e1": "E",
@@ -560,7 +560,7 @@
     "es-tax-regime-exempt": "Exento",
     "es-tax-regime-general": "Régimen general",
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
-    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
+    "es-tax-regime-group-entities": "Regime especial do grupo de entidades",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
     "es-tax-regime-telecom": "R",
@@ -623,7 +623,7 @@
     "finalize": "finalize",
     "find-problems": "Encontrar problemas",
     "finished": "Finalizado",
-    "finished-cron": "Finalizou a execução do cron do FacturaScripts, tempo transcorrido: %timeNeeded%",
+    "finished-cron": "Terminou a execução do cron do FacturaScripts, tempo decorrido: %timeNeeded%",
     "first-quarter": "Primer trimestre",
     "first-steps": "f",
     "first-trimester": "First trimester",
@@ -853,7 +853,7 @@
     "last-block": "Último bloco",
     "last-ip": "Último IP",
     "last-month": "last-month",
-    "last-price-estimation": "Última precio de presupuesto",
+    "last-price-estimation": "Último preço de orçamento",
     "last-price-sale": "Último precio de venta",
     "last-purchase-price": "último-preço-de-compra",
     "last-quarter": "last-quarter",
@@ -968,7 +968,7 @@
     "month": "Mes",
     "month-1": "Enero",
     "month-10": "Octubre",
-    "month-11": "Noeviembre",
+    "month-11": "Novembro",
     "month-12": "Diciembre",
     "month-2": "Fevereiro",
     "month-3": "Marzo",
@@ -1120,7 +1120,7 @@
     "pct": "% pct",
     "pct-irpf": "% IRPF",
     "pct-surcharge": "Surcharge rate",
-    "pct-tax": "% impuestos",
+    "pct-tax": "% impostos",
     "pct-vat": "VAT rate",
     "pending": "pending",
     "pending-invoices-button": "Risco:",
@@ -1225,7 +1225,7 @@
     "quantity-abb": "quantity-abb",
     "quantity-remaining": "Cantidad restante",
     "quantity-served": "quantity-served",
-    "quantity-sold": "quantity-sold",
+    "quantity-sold": "vendido-em-quantidade",
     "randomizer-generating-more-items": "randomizer-generating-more-items",
     "rate": "rate",
     "rates": "Preços",
@@ -1246,7 +1246,7 @@
     "record-not-found": "record-not-found",
     "record-save-error": "An error occurred while saving the record",
     "record-updated-correctly": "Registro atualizado corretamente!",
-    "recreate-system-integrity": "Recreate system integrity",
+    "recreate-system-integrity": "Recriar integridade do sistema",
     "rectified-invoice": "rectified-invoice",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
     "rectified-invoices": "Facturas rectificativas",
@@ -1381,7 +1381,7 @@
     "show-crm-warnings": "Mostrar avisos CRM",
     "show-expired-receipts": "Mostrar recibos vencidos",
     "show-month-stats": "Mostrar estadísticas mensuales",
-    "show-pending-remittances": "Mostrar remesas pendientes",
+    "show-pending-remittances": "Mostrar remessas pendentes",
     "show-price": "Show price on print",
     "show-quantity": "Mostrar quantidade ao imprimir",
     "show-section-new": "Mostrar sección crear",
@@ -1403,7 +1403,7 @@
     "sort-by-ref-desc": "Ordenar por referencia desc.",
     "sorted-asc": "Ordenado ascendente",
     "sorted-desc": "Ordenado descendente",
-    "source": "Fuente",
+    "source": "Fonte",
     "source-code": "Source code",
     "special-account": "Conta especial",
     "special-accounting-entries": "special-accounting-entries",
@@ -1440,7 +1440,7 @@
     "subaccount-irpf-creditor": "subaccount-irpf-creditor",
     "subaccount-not-found": "Subconta 0 não encontrado.",
     "subaccount-purchases": "Account for purchases",
-    "subaccount-pyg-not-found": "subaccount-pyg-not-found",
+    "subaccount-pyg-not-found": "subconta-pyg-não-encontrada",
     "subaccount-sales": "Cuenta de ventas",
     "subaccounts": "Subcontas",
     "subfamilies": "s",
@@ -1510,7 +1510,7 @@
     "test": "Test",
     "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
-    "text-color": "Color de texto",
+    "text-color": "Cor do texto",
     "texts": "Textos",
     "third-quarter": "3º trimestre",
     "third-trimester": "Terceiro Trimestre",
@@ -1620,9 +1620,9 @@
     "VAT-register": "VAT registration",
     "vat-regularization": "VAT Regularization",
     "vehicle": "Vehículo",
-    "verified": "verified",
+    "verified": "verificado",
     "version": "Versão",
-    "video": "Video",
+    "video": "Vídeo",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
@@ -1668,7 +1668,7 @@
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
     "you-sent-a-audio": "Enviaste un audio",
     "you-sent-a-document": "Enviaste un documento",
-    "you-sent-a-location": "Enviaste una ubicación",
+    "you-sent-a-location": "Você enviou uma localização",
     "you-sent-a-picture": "Você enviou uma imagem",
     "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "deveria-mudar-senha",
