--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -648,7 +648,7 @@
     "formula-cost-price": "Fòrmula per a calcular la tarifa a partir del preu de cost",
     "formula-sale-price": "Fòrmula per a calcular la tarifa a partir del preu de venda",
     "formula-to-apply": "Fòrmula a aplicar",
-    "fourth-quarter": "4º trimestre",
+    "fourth-quarter": "4t trimestre",
     "fourth-trimester": "Quart trimestre",
     "free": "Gratuït",
     "friday": "friday",
@@ -1157,7 +1157,7 @@
     "plugin-needs-fs-version": "El complement %pluginName% necessita FacturaScripts %minVersion% pero tens instalat FacturaScripts %version%",
     "plugin-not-compatible": "El complement %pluginName% no és compatible en FacturaScripts 2018.",
     "plugin-order": "Ordre: %num%",
-    "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
+    "plugin-phpversion-error": "El plugin %pluginName% requereix PHP %php% o superior",
     "plugin-removal-disabled": "L'eliminació de complements està deshabilitada en este servidor",
     "plugin-unsupported-version": "El plugin %pluginName% és per a FacturaScripts 2017 o anteriors, però estàs fent servir FacturaScripts %version%",
     "plugin-update": "Actualització del complement %pluginName% a la versió %version%",
@@ -1338,7 +1338,7 @@
     "selector-number": "Selector",
     "send": "Enviar",
     "send-anonymous-data": "Enviar datos anónimos",
-    "send-audios": "Enviar audios",
+    "send-audios": "Envia àudios",
     "send-documents": "Enviar documents",
     "send-images": "Enviar imatges",
     "send-invoices": "Enviar factures",
@@ -1464,7 +1464,7 @@
     "supplier-delivery-notes": "Albarans dels proveïdors",
     "supplier-estimation": "Presupost del proveïdor",
     "supplier-estimations": "Presuposts dels proveïdors",
-    "supplier-have-no-iban": "El proveedor %%supplier no tiene IBAN (cuenta bancaria)",
+    "supplier-have-no-iban": "El proveïdor %%supplier no té IBAN (compte bancària)",
     "supplier-invoice": "Factura del proveïdor",
     "supplier-invoice-deleted-successfully": "La factura de compra %docCode% s'ha borrat correctament.",
     "supplier-invoices": "Factures dels Proveïdors",
@@ -1528,7 +1528,7 @@
     "time": "Hora",
     "timezone": "Selecciona la zona horària",
     "title": "Títul",
-    "title-font-size": "title-font-size",
+    "title-font-size": "mida-font-títol",
     "title-url": "Títul (URL)",
     "to": "Per a",
     "to-refund": "A devolver",
@@ -1588,12 +1588,12 @@
     "update-time": "Hora de l'actualització",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualitzador",
-    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
+    "updating-attached-relations": "Actualitzant comptadors d'arxius adjunts",
     "upload-file": "Subir archivo",
     "uploaded-at": "Pujat el",
     "url": "Lloc Web",
     "use-gaps": "Usar buits",
-    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
+    "use-holes-invoices-esp": "Si desmarques l'ús d'espais en factures i en treus alguna es quedarà l'espai en la facturació i tindràs problemes amb hisenda",
     "user": "Usuari",
     "user-and-config": "Usuario y configuración",
     "users": "Usuaris",
@@ -1627,7 +1627,7 @@
     "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "view-estimation": "V",
-    "view-order": "Ver pedido",
+    "view-order": "Veure comanda",
     "warehouse": "Magatzem",
     "warehouse-cant-be-same": "L'almagasém d'orige i el de destí no poden ser el mateix.",
     "warehouse-must-be-same-business": "Els almagasens d'orige i de destí han de pertànyer a la mateixa empresa",
@@ -1666,7 +1666,7 @@
     "yes": "Sí",
     "yesterday": "Ahir",
     "you-cant-delete-primary-variant": "No pots eliminar la variant principal del producte",
-    "you-sent-a-audio": "Enviaste un audio",
+    "you-sent-a-audio": "Vas enviar un àudio",
     "you-sent-a-document": "Vas enviar un document",
     "you-sent-a-location": "Enviaste una ubicación",
     "you-sent-a-picture": "Enviaste una imagen",
