--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -398,7 +398,7 @@
     "db-user": "Benutzerdatenbank",
     "debit": "Soll",
     "debug-mode": "Debugging-Modus",
-    "december": "Diciembre",
+    "december": "Dezember",
     "decimal-separator": "Dezimaltrennzeichen",
     "decimals": "Dezimalzahlen",
     "default": "Voreinstellung",
@@ -493,7 +493,7 @@
     "dto": "Scheibe.",
     "dto-2": "Rabatt-2",
     "duplicate-record": "Eintrag doppelt",
-    "duplicated-reference": "Referencia '%reference%' duplicada",
+    "duplicated-reference": "Doppelte Referenz '%reference%'",
     "duplicated-request": "Antrag doppelt",
     "duration": "Dauer",
     "edit": "Bearbeiten",
@@ -599,7 +599,7 @@
     "family": "Familie",
     "family-code": "Familiencode",
     "fax": "Fax",
-    "february": "Febrero",
+    "february": "Februar",
     "field-can-not-be-null": "Das Feld %fieldName% der Tabelle %tableName% kann nicht Null sein",
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
@@ -744,7 +744,7 @@
     "image": "Bild",
     "images": "Bilder",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
-    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
+    "impacted-tax-re-subaccount": "Betroffenes Steuer-Unterkonto",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
     "import": "importieren",
     "import-accounting-plan": "Import accounting plan",
@@ -800,7 +800,7 @@
     "ip-banned": "ip-banned",
     "irpf": "Einkommensteuer",
     "irpf-record-not-found": "Registro de IRPF %value%% no encontrado.",
-    "irpf-subaccount-not-found": "irpf-subaccount-not-found",
+    "irpf-subaccount-not-found": "IRPF-Unterkonto nicht gefunden",
     "is-admin": "Ist Administrator",
     "is-creditor": "Ist Gläubiger",
     "is-person": "Es ist eine Einzelperson (keine Firma)",
@@ -874,7 +874,7 @@
     "level2": "Level 2",
     "level3": "Level 3",
     "level4": "Level 4",
-    "liabilities": "Liabilities",
+    "liabilities": "Verbindlichkeiten",
     "library": "Bibliotek",
     "license": "Licencia",
     "like-than": "Wie als",
@@ -932,7 +932,7 @@
     "marked-as-homepage": "Als Homepage markiert",
     "max-input-vars-warning": "max-input-vars-warning",
     "max-risk": "max-risk",
-    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-with-cifnif": "Maximalbetrag mit CIF\/NIF",
     "maximum-amount-without-cifnif": "M",
     "maximum-stock": "Höchstbestand",
     "may": "Mayo",
@@ -954,7 +954,7 @@
     "minimum-amount-with-cifnif": "Minimalbetrag mit CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Mindestbestand",
-    "minutes": "Minutes",
+    "minutes": "Minuten",
     "mismatched-accounting-entry": "mismatched-accounting-entry",
     "missing-data-epigraph-group": "Fehlende Daten in der Gruppenepigraph.",
     "missing-data-subaccount": "Daten fehlen im Unterkonto.",
@@ -993,7 +993,7 @@
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Dieses Feld ist nur notwendig, in einigen Hostings MySQL.",
     "name": "Nombre",
-    "name-or-business-name": "Name or Bussine name",
+    "name-or-business-name": "Name oder Firmenname",
     "nature": "Natur",
     "need-help-password": "need-help-password",
     "negative-balance": "negative-balance",
@@ -1055,7 +1055,7 @@
     "october": "Octubre",
     "offsetting-account": "Offsetting account",
     "only-active": "Nur aktive",
-    "only-charged": "only-charged",
+    "only-charged": "nur berechnet",
     "only-closed": "only-closed",
     "only-insert": "Sólo añadir",
     "only-owner-data": "only-owner-data",
@@ -1152,7 +1152,7 @@
     "plugin-installation-disabled": "Die Plugin-Installation ist auf diesem Server deaktiviert",
     "plugin-installed": "Plugin installiert",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
-    "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
+    "plugin-need-update-but": "Das Plugin %plugin% benötigt noch ein kompatibles Update.",
     "plugin-needed": "Plugin %pluginName% nötig.",
     "plugin-needs-fs-version": "Plugin %pluginName% benötigt FacturaScripts %minVersion%, aber sie haben FacturaScripts %version% installiert",
     "plugin-not-compatible": "Plugin %pluginName% nicht kompatibel mit FacturaScripts 2018.",
@@ -1213,7 +1213,7 @@
     "public": "Öffentlichkeit",
     "public-key": "Clave pública",
     "purchase-rate": "Kaufrate",
-    "purchased-quantity": "purchased-quantity",
+    "purchased-quantity": "Gekaufte Menge",
     "purchases": "Käufe",
     "purchases-subaccount-not-found": "purchases-subaccount-not-found",
     "pvp": "Endverbraucherpreis",
@@ -1237,7 +1237,7 @@
     "readonly": "readonly",
     "rebuild": "rebuild",
     "rebuild-completed": "rebuild-completed",
-    "rebuild-stock": "rebuild-stock",
+    "rebuild-stock": "Bestand neu erstellen",
     "receipt": "receipt",
     "receipt-expense-account": "receipt-expense-account",
     "receipts": "Rechnungen",
@@ -1381,7 +1381,7 @@
     "show-crm-warnings": "Mostrar avisos CRM",
     "show-expired-receipts": "Mostrar recibos vencidos",
     "show-month-stats": "Mostrar estadísticas mensuales",
-    "show-pending-remittances": "Mostrar remesas pendientes",
+    "show-pending-remittances": "Zeige ausstehende Überweisungen",
     "show-price": "Show price on print",
     "show-quantity": "Show quantity on print",
     "show-section-new": "Mostrar sección crear",
@@ -1456,7 +1456,7 @@
     "sunday": "sunday",
     "supplied": "g",
     "supplied-amount": "supplied-amount",
-    "supplied-subaccount-not-found": "supplied-subaccount-not-found",
+    "supplied-subaccount-not-found": "Lieferkonto nicht gefunden",
     "supplier": "Lieferant",
     "supplier-account-not-found": "supplier-account-not-found",
     "supplier-code": "supplier-code",
@@ -1496,7 +1496,7 @@
     "tax": "MwSt",
     "tax-area": "tax-area",
     "tax-areas": "tax-areas",
-    "tax-base": "Tax base",
+    "tax-base": "Steuerbemessungsgrundlage",
     "tax-credit-account": "Credit account for taxes",
     "tax-debit-account": "Debit account for taxes",
     "tax-transport": "Steuerverkehr",
@@ -1515,7 +1515,7 @@
     "third-quarter": "3º trimestre",
     "third-trimester": "Third trimester",
     "this-last-fortnight": "this-last-fortnight",
-    "this-last-month": "this-last-month",
+    "this-last-month": "diesen letzten Monat",
     "this-last-week": "this-last-week",
     "this-last-year": "this-last-year",
     "this-month": "this-month",
@@ -1544,7 +1544,7 @@
     "totalirpf-value-error": "Gesamt-IRPF-Betrag von 0 1 falsch (2). Richtige Menge: 3",
     "totaliva-value-error": "Gesamtsteuerbetrag von 0 1 falsch (2). Richtige Menge: 3",
     "totallinea-value-error": "Fehler im Gesamtbetrag der Mehrwertsteuerzeile der Steuer 0 der Rechnung. Richtiger Wert: 1",
-    "totals": "Totales",
+    "totals": "Summen",
     "town": "Stadt, Dorf",
     "tracking-code": "Tracking-Code",
     "transfer": "transfer",
@@ -1638,7 +1638,7 @@
     "website": "Webseite",
     "wednesday": "Mittwoch",
     "weeks": "Wochen",
-    "weight": "Peso",
+    "weight": "Gewicht",
     "which-logs-store": "Welche Logs speichern",
     "width": "Breite",
     "wildcard": "Platzhalter",
