--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -72,9 +72,9 @@
     "alerts": "Alertas",
     "alfa-code-2": "Código alfa 2",
     "alfa-code-3": "Código alfa 3",
-    "alias": "Alias",
+    "alias": "Pseudonim",
     "alias-general-info": "Permite dar un nombre al valor de la columna de su izquierda",
-    "alias-wildcard-info": "Valor del alias definido previamente. Ejplo: %base%, %cuota%",
+    "alias-wildcard-info": "Wartość aliasu zdefiniowanego wcześniej. Na przykład: %base%, %składka%",
     "all": "Todos",
     "all-variants": "Todas las variantes",
     "allow-delete": "Permitir eliminar",
@@ -204,7 +204,7 @@
     "cant-delete-variant-with-documents": "Nie można usunąć produktu lub wariantu %reference%, ponieważ został już kupiony lub sprzedany. Możesz go jednak zablokować, jeśli chcesz.",
     "cant-load-controller": "No se puede cargar el controlador '%controllerName%'.",
     "cant-modify-reference": "Imposible modificar la referencia.",
-    "cant-remove-accounting-entry": "No se puede eliminar el asiento",
+    "cant-remove-accounting-entry": "Nie można usunąć wpisu księgowego",
     "cant-remove-invoice-refund": "Nie można usunąć faktury, która ma już zwrot",
     "cant-remove-receipt": "No se puede eliminar el recibo",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
@@ -305,7 +305,7 @@
     "control-panel": "Panel de control",
     "control-panel-decimal-warning": "Advertencia: este cambio se aplicará a los precios de productos, pero también a los totales de facturas, asientos, etc.",
     "controller": "Controlador",
-    "controller-error": "Error de Controlador",
+    "controller-error": "Błąd kontrolera",
     "controller-not-found": "Controlador no encontrado",
     "conversion-rate": "Tasa de conversión a €",
     "conversion-rate-not-0": "La tasa de conversión no puede ser 0.",
@@ -328,7 +328,7 @@
     "create": "Crear",
     "create-accounting-entry": "Crear Asiento Contable",
     "create-delivery-note": "Crear albarán",
-    "create-estimation": "Crear presupuesto",
+    "create-estimation": "Utwórz szacunek",
     "create-invoice": "Crear factura",
     "create-new-record": "Crear nuevo registro",
     "created": "Creado",
@@ -369,7 +369,7 @@
     "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
     "dasboard-backup-li2": "Si borra o desinstala XAMPP, pierde los datos.",
     "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
-    "dashboard": "Tablero",
+    "dashboard": "Tablica",
     "dashboard-backup": "Copia de seguridad",
     "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
     "dashboard-for": "Tablero de %company%",
@@ -766,7 +766,7 @@
     "installer": "Instalador",
     "installer-p": "Bienvenido al instalador de FacturaScripts. Rellena los campos necesarios para conectar a la base de datos.",
     "installer-requirements": "Las siguientes extensiones y funciones son necesarias en FacturaScripts:",
-    "integrity-check": "Verificación de integridad",
+    "integrity-check": "Kontrola integralności",
     "integrity-check-help": "Esta es una verificación de la integridad del sistema, descrita como",
     "interest": "Interés",
     "international-identifier": "Identificación internacional",
@@ -925,7 +925,7 @@
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código de fabricante",
     "manufacturers": "Fabricantes",
-    "march": "Marzo",
+    "march": "Marzec",
     "margin": "Margen",
     "margin-top": "Márgen superior",
     "mark-as-homepage": "Marcar como página de inicio",
@@ -971,7 +971,7 @@
     "month-11": "Noviembre",
     "month-12": "Diciembre",
     "month-2": "Febrero",
-    "month-3": "Marzo",
+    "month-3": "Marzec",
     "month-4": "Abril",
     "month-5": "Mayo",
     "month-6": "Junio",
@@ -1030,7 +1030,7 @@
     "not-allowed-delete": "No tiene permiso para eliminar",
     "not-allowed-modify": "No tiene permiso para modificar",
     "not-enough-stock": "No hay suficiente stock de %reference%",
-    "not-passed-integrity-check": "Algunos archivos no han pasado la verificación de integridad ... <br\/>Puedes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtener más detalles aquí<\/a>.",
+    "not-passed-integrity-check": "Niektóre pliki nie przeszły weryfikacji integralności ... <br\/>Możesz <a class='alert-link' target='_blank' href='IntegritySystemCheck'>uzyskać więcej szczegółów tutaj<\/a>.",
     "not-public": "Niepubliczny",
     "not-stored-content": "Zawartość nieprzechowana",
     "not-valid-email": "Email %email% no válido",
@@ -1098,7 +1098,7 @@
     "paid-receipts-prevent-action": "No se puede ejecutar esta acción habiendo recibos pagados",
     "parent": "Padre",
     "parent-account": "Cuenta Padre",
-    "parent-family-cant-be-child": "La familia padre no puede ser la misma que la hija.",
+    "parent-family-cant-be-child": "Rodzina nadrzędna nie może być taka sama jak dziecko.",
     "parent-group": "Grupo Padre",
     "parent-group-cant-be-the-same-group": "El Grupo Padre no puede ser el mismo grupo",
     "parent-group-loop": "El Grupo Padre %parentGroup% está causando una relación circular.",
@@ -1133,19 +1133,19 @@
     "percentage-vat": "% Impuesto",
     "period": "Periodo",
     "personalized": "Personalizado",
-    "phase": "Fase",
+    "phase": "Faza",
     "phone": "Teléfono",
     "phone2": "Teléfono 2",
     "phones": "Teléfonos",
     "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
-    "physical-stock": "Stock físico",
+    "physical-stock": "Alyz fizyczny",
     "picking": "Picking",
     "plan": "Plan",
     "please-enter-value": "Por favor, introduzca un valor para el campo",
     "plugin": "Plugin",
-    "plugin-deleted": "Plugin %pluginName% ha sido eliminado correctamente.",
+    "plugin-deleted": "Wtyczka %pluginName% została pomyślnie usunięta.",
     "plugin-disabled": "El Plugin %pluginName% ha sido desactivado correctamente.",
     "plugin-enabled": "El Plugin %pluginName% ha sido activado correctamente.",
     "plugin-file-too-big": "Ten serwer nie pozwala na przesyłanie plików większych niż %size% MB. Proszę zwiększyć maksymalny rozmiar przesyłanego pliku w PHP lub skopiuj plik do folderu wtyczek.",
@@ -1210,7 +1210,7 @@
     "provider-reference": "Referéncia de proveedor",
     "province": "Provincia",
     "provinces": "Provincias",
-    "public": "Público",
+    "public": "Publiczne",
     "public-key": "Clave pública",
     "purchase-rate": "Tasa de compras",
     "purchased-quantity": "Cant. comprada",
@@ -1236,7 +1236,7 @@
     "read-more": "Leer más",
     "readonly": "Sólo lectura",
     "rebuild": "Reconstruir",
-    "rebuild-completed": "Reconstrucción completada",
+    "rebuild-completed": "Przebudowa zakończona",
     "rebuild-stock": "Reconstruir stock",
     "receipt": "Recibo",
     "receipt-expense-account": "Gastos en el recibo %document%",
@@ -1269,7 +1269,7 @@
     "regularization-operation": "Regularización",
     "reject": "Rechazar",
     "rejected": "Rechazado",
-    "related": "Relacionado",
+    "related": "Powiązane",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
     "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "Recargando...",
@@ -1304,7 +1304,7 @@
     "result": "Resultado",
     "retention": "Retención",
     "retentions": "Retenciones",
-    "review-date": "Fecha de revisión",
+    "review-date": "Data przeglądu",
     "right": "Derecha",
     "risky-customer": "Cliente con riesgo",
     "rol": "Grupo",
@@ -1328,14 +1328,14 @@
     "search-product": "Buscar producto",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
-    "second-trimester": "Segundo trimestre",
+    "second-trimester": "Drugi trymestr",
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
     "select-none": "Seleccionar nada",
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar usuario",
     "selected-quantity": "Cant. seleccionada",
-    "selector-number": "Selector",
+    "selector-number": "Wybierający numer",
     "send": "Enviar",
     "send-anonymous-data": "Wysyłanie anonimowych danych",
     "send-audios": "Enviar audios",
@@ -1392,7 +1392,7 @@
     "sketch": "Boceto",
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
     "small": "Pequeño",
-    "smaller-than": "Menor que",
+    "smaller-than": "Mniejsze niż",
     "soap-extension-not-installed": "Rozszerzenie SOAP nie jest zainstalowane w PHP. Skontaktuj się z dostawcą hostingu, aby je aktywować.",
     "social-security-number": "Número Seguridad Social",
     "sort": "Orden",
@@ -1421,7 +1421,7 @@
     "status": "Estado",
     "status-document": "Estado del documento",
     "status-name-valid-length": "Nombre del estado no válido (debe tener entre 1 y 20 carácteres).",
-    "status-value-is-number": "El campo estado debe ser numérico.",
+    "status-value-is-number": "Pole statusu musi być liczbą.",
     "stock": "Stock",
     "stock-transfer": "Transferencia de stock",
     "stock-transfers": "Transferencias de stock",
@@ -1633,7 +1633,7 @@
     "warehouse-must-be-same-business": "Los almacenes de origen y destino deben ser de la misma empresa",
     "warehouses": "Almacenes",
     "warning": "Atención",
-    "warnings": "Avisos",
+    "warnings": "Ostrzeżenia",
     "web": "Web",
     "website": "Web",
     "wednesday": "Miércoles",
